<?xml version="1.0"?>
<package format="2">
    <name>rr_common</name>
    <version>0.0.0</version>
    <description>The RoboRacing navigation package</description>

    <maintainer email="dmartin1@gatech.edu">Daniel Martin</maintainer>

    <license>MIT</license>

    <url type="website">http://robojackets.org</url>
    <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
    <url type="website">http://www.github.com/robojackets/roboracing-software</url>


    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>rr_msgs</depend>
    <depend>nodelet</depend>
    <depend>sound_play</depend>
    <exec_depend>pid</exec_depend>

    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>parameter_assertions</build_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>
