<?xml version="1.0"?>
<package format="2">
  <name>rr_description</name>
  <version>0.0.0</version>
  <description>Platform description for RoboRacing</description>

  <maintainer email="dmartin1@gatech.edu">Daniel Martin</maintainer>

  <license>MIT</license>

  <url type="website">http://robojackets.org</url>
  <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
  <url type="website">http://www.github.com/robojackets/roboracing-software</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <depend>gazebo_ros</depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
