<?xml version="2.0"?>
<package format="2">
  <name>rr_description</name>
  <version>2.0.0</version>
  <description>Platform description for RoboRacing</description>

  <maintainer email="dmartin1@gatech.edu">Daniel Martin</maintainer>

  <license>MIT</license>

  <url type="website">http://robojackets.org</url>
  <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
  <url type="website">http://www.github.com/robojackets/roboracing-software</url>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>xacro</build_depend>


  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_worlds</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>velodyne_simulator</exec_depend>

  <!--<depend>gazebo_ros</depend> -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
