<?xml version="1.0"?>
<package format="2">
  <name>rr_evgp</name>
  <version>0.0.0</version>
  <description>competition-specific configuration for EV Grand Prix</description>

  <maintainer email="dmartin1@gatech.edu">Daniel Martin</maintainer>

  <license>MIT</license>

  <url type="website">http://robojackets.org</url>
  <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
  <url type="website">http://www.github.com/robojackets/roboracing-software</url>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rr_common</depend>
  <depend>rr_description</depend>
  <depend>rr_gazebo</depend>
  <depend>rr_platform</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>distance_map</exec_depend>

  <export>

  </export>
</package>
