<?xml version="1.0"?>
<package format="2">
    <name>rr_iarrc</name>
    <version>0.0.0</version>
    <description>The iarrc package</description>

    <maintainer email="dmartin1@gatech.edu">Daniel Martin</maintainer>

    <license>MIT</license>

    <url type="website">http://robojackets.org</url>
    <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
    <url type="website">http://www.github.com/robojackets/roboracing-software</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rr_msgs</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>nodelet</depend>

    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>
