<?xml version="1.0"?>
<package format="2">
    <name>rr_ml</name>
    <version>0.0.0</version>
    <description>Tools for creating datasets and models</description>

    <maintainer email="dmartin1@gatech.edu">Daniel Martin</maintainer>

    <license>MIT</license>

    <url type="website">http://robojackets.org</url>
    <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
    <url type="website">http://www.github.com/robojackets/roboracing-software</url>


    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>rr_msgs</depend>
    <depend>cv_bridge</depend>
</package>
