<?xml version="1.0"?>
<package format="2">
    <name>rr_msgs</name>
    <version>0.0.1</version>
    <description>competition-specific configuration for EV Grand Prix</description>

    <author email="evanbretl4@gmail.com">Evan Bretl</author>
    <maintainer email="dmartin1@gatech.edu">Daniel Martin</maintainer>

    <license>MIT</license>

    <url type="website">http://robojackets.org</url>
    <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
    <url type="website">http://www.github.com/robojackets/roboracing-software</url>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>gencpp</build_depend>
    <build_depend>genpy</build_depend>

    <exec_depend>message_runtime</exec_depend>

</package>
