<?xml version="1.0"?>
<package>
  <name>rr_platform</name>
  <version>0.0.0</version>
  <description>The RoboRacing platform package</description>

  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>
  <maintainer email="chsahit@gmail.com">Sahit Chintalapudi</maintainer>
  <maintainer email="evanbretl4@gmail.com">Evan Bretl</maintainer>



  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <url type="website">http://robojackets.org</url>
  <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
  <url type="website">http://www.github.com/robojackets/roboracing-software</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libusb-1.0</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libuvc_camera</build_depend>

  <run_depend>laser_geometry</run_depend>
  <run_depend>sick_tim</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sick_tim</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libuvc_camera</run_depend>
  <run_depend>realsense_camera</run_depend>
  <run_depend>pointgrey_camera_driver</run_depend>

</package>
