<?xml version="1.0"?>
<package format="2">
  <name>rr_platform</name>
  <version>0.0.0</version>
  <description>The RoboRacing platform package</description>

  <maintainer email="dmartin1@gatech.edu">Daniel Martin</maintainer>

  <license>MIT</license>

  <url type="website">http://robojackets.org</url>
  <url type="website">http://wiki.robojackets.org/w/RoboRacing</url>
  <url type="website">http://www.github.com/robojackets/roboracing-software</url>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>rr_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>sick_tim</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>libusb-1.0</exec_depend>
  <exec_depend>libusb-1.0-dev</exec_depend>
  <exec_depend>libuvc_camera</exec_depend>
  <exec_depend>pointgrey_camera_driver</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
